--- a/Latitude/Windspeed.html
+++ b/Latitude/Windspeed.html
@@ -74,7 +74,7 @@
         <br>
         <h1>Wind Speed</h1>
         <hr>
-        <a href="Temp.html"><img src="Resources/images/Fig4.png" alt="Latitude vs. Temperature"></a>
+        <a href="Temp.html"><img src="Resources/images/Fig4.png" alt="Latitude vs. Windspeed"></a>
 
         <p>
           Wind speed tends to strong as one moves away from the equator (0 Deg. Latitude).
