--- a/Latitude/data.html
+++ b/Latitude/data.html
@@ -33,7 +33,7 @@
               <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="Temp.html">Max Temperature</a>
                 <a class="dropdown-item" href="Humidity.html">Humidity</a>
-                <a class="dropdown-item" href="Cloudines.html">Cloudiness</a>
+                <a class="dropdown-item" href="Cloudiness.html">Cloudiness</a>
                 <a class="dropdown-item" href="Windspeed.html">Wind Speed</a>
               </div>
           </li>
