--- a/Latitude/landingpage.html
+++ b/Latitude/landingpage.html
@@ -52,7 +52,7 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="comparison.html">Comparison</a>
+                <a class="nav-link" href="comparisons.html">Comparison</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="data.html">Data</a>
